<resources>
    <string name="app_name">Elderaid</string>
    <string name="contact_tvTitle">Contact</string>
    <string name="contact_tvUserName">Team ELDERAID</string>
    <string name="contact_tvMyCard">My card</string>
    <string name="contact_tvFavorites">Favorites</string>
    <string name="contact_tvFavorite1">Unknown</string>
    <string name="contact_tvFavorite2">Unknown</string>
    <string name="contact_tvFavorite3">Unknown</string>
    <string name="contact_tvContactsAll">All</string>
    <string name="prescription_tvTitle">Prescription level</string>
    <string name="prescription_tvAddMedication">Add a medication</string>
    <string name="prescription_tvMyMedications">My medications</string>
    <string name="prescription_tvMyMedication1Name">Xanax</string>
    <string name="prescription_tvMyMedication1ExpDate">Exp. date : 10/02/2022</string>
    <string name="prescription_tvMyMedication1Quantity"><b>15</b> left</string>
    <string name="prescription_tvMyMedication2Name">Ibuprofen</string>
    <string name="prescription_tvMyMedication2ExpDate">Exp. date : 10/02/2022</string>
    <string name="prescription_tvMyMedication2Quantity"><b>10</b> left</string>
    <string name="prescription_tvMyMedication3Name">Celexa</string>
    <string name="prescription_tvMyMedication3ExpDate">Exp. date : 10/02/2022</string>
    <string name="prescription_tvMyMedication3Quantity"><b>3</b> left</string>
    <string name="prescription_tvMyMedication4Name">Risperdal</string>
    <string name="prescription_tvMyMedication4ExpDate">Exp. date : 10/02/2018</string>
    <string name="prescription_tvMyMedication4Quantity"><b>20</b> left</string>
    <string name="calendar_tvSyncEvents">Sync. events</string>
    <string name="calendar_tvAddEvent">Add an event</string>
    <string name="calendar_tvEvent1Name">Eat Christmas chocolates</string>
    <string name="calendar_tvEvent1Time">1pm - 2pm</string>
    <string name="calendar_tvEvent2Name">Eat more Christmas chocolates</string>
    <string name="calendar_tvEvent2Time">2pm - 3pm</string>
    <string name="calendar_tvEvent3Name">Eat still more Christmas chocolates</string>
    <string name="calendar_tvEvent3Time">3pm - 4pm</string>
    <string name="calendar_placeholder">Error: Unknown</string>
    <string name="addevent_etEventName">Name of the event</string>
    <string name="addevent_etEventPlace">Add a location</string>
    <string name="addevent_etEventDescription">Add a description</string>
    <string name="addevent_btnCancelEvent">
        <u>Cancel</u>
    </string>
    <string name="addevent_btnAddEvent">Add the event</string>
    <string name="medical_tvTitle">Medical Information</string>
    <string name="medical_tvNameType">Name:</string>
    <string name="medical_tvName">Example Name</string>
    <string name="medical_tvAgeType">Age:</string>
    <string name="medical_tvAge">85</string>
    <string name="medical_tvBloodType">Blood Type:</string>
    <string name="medical_tvBlood">A-</string>
    <string name="medical_profilePic_altText">Profile Picture of the individual</string>
    <string name="medical_tvMedication">Medication</string>
    <string name="medical_tvMedication1">Wartarin</string>
    <string name="medical_tvMedication2">Atenolol</string>
    <string name="medical_tvMedication3">Rantidine</string>
    <string name="medical_tvMedication4">Levodopa</string>
    <string name="medical_tvMedication5">Salbutamol</string>
    <string name="medical_tvMedication6">Predrisolone</string>
    <string name="medical_tvMedication7">Levothyroxine</string>
    <string name="medical_tvMedication8">Statin</string>
    <string name="medical_tvMedication9">Oxycodone</string>
    <string name="medical_tvMedication10">Simvastin</string>
    <string name="medical_tvConditions">Medical Conditions</string>
    <string name="medical_tvCondition1">High Blood Pressure</string>
    <string name="medical_tvCondition2">Gastroesophageal Reflux Disease</string>
    <string name="medical_tvCondition3">Parkinsons</string>
    <string name="medical_tvCondition4">Asthma</string>
    <string name="medical_tvCondition5">Arthritis</string>
    <string name="medical_tvCondition6">Hypothyroidism</string>
    <string name="medical_tvCondition7">High Cholesterol</string>
    <string name="medical_tvCondition8">Heart Burn</string>
    <string name="medical_tvCondition9">Diabetes</string>
    <string name="medical_tvCondition10">Allergic to Peanuts</string>
    <string name="medical_tvInsurance">Insurance Information</string>
    <string name="medical_btnInsurance">View Info</string>
    <string name="medical_tvEmergency">Emergency Contact</string>
    <string name="medical_btnEmerAltText">Text emergency contact</string>
    <string name="medical_btnEmerAltCall">Call emergency contact</string>
    <string name="medical_edit">Edit</string>
    <string name="medical_editTitle">Edit your Medical Info</string>
    <string name="medical_editName">Edit Name</string>
    <string name="medical_editAge">Edit Age</string>
    <string name="medical_editBT">Edit Blood Type</string>
    <string name="medical_choosePhoto">Choose Photo</string>
    <string name="chooserBtn">Choose</string>
    <string name="basicInfo">Basic Information</string>
    <string name="medicationInfo">Medication Information</string>
    <string name="editInstructionsMedication">Please enter the Medication name, each on a new line</string>
    <string name="editInstructionsCondition">Please enter the Condition name, each on a new line</string>
    <string name="conditionsInfo">Medical Conditions Information</string>
    <string name="insuranceInfo">Insurance Information</string>
    <string name="editProvider">Edit Provider</string>
    <string name="editInsuranceNum">Edit Insurance Number</string>
    <string name="emergencyContactInfo">Emergency Contact Information</string>
    <string name="tvEmergencyContactNum">Edit Phone number</string>
    <string name="edit_med_submit">Submit</string>
    <string name="edit_med_cancel">Cancel</string>
    <string name="viewInsuranceTitle">View Insurance</string>
    <string name="tvInsuranceProviderType">Insurance Provider: </string>
    <string name="tvInsuranceNumberType">Insurance Number: </string>
    <string name="tvExampleInsuranceProvider">Health And Co.</string>
    <string name="tvExampleInsuranceNumber">8337462-ABKE-22094</string>
    <string name="btnOK">OK</string>
    <string name="maps_tvTitle">Maps</string>
    <string name="maps_altText1">Hospital</string>
    <string name="maps_altText2">Home</string>
    <string name="maps_altText3">Shop</string>
    <string name="maps_altText4">Vet</string>
    <string name="maps_tvSearch">Search for your destination</string>
    <string name="maps_etPlaceholder">Put your location here</string>
    <string name="maps_submit">Submit</string>
    <string name="maps_favourite">Edit Favourites</string>
    <string name="maps_fav_title">Edit your Favourites</string>
    <string name="maps_fav1">Address of Favourite 1</string>
    <string name="maps_fav2">Address of Favourite 2</string>
    <string name="maps_fav3">Address of Favourite 3</string>
    <string name="maps_fav4">Address of Favourite 4</string>
    <string name="maps_fav_placeholder">Address</string>
    <string name="maps_fav_submit">Submit</string>
    <string name="maps_fav_cancel">Cancel</string>
    <string name="sideNavTitle">Navigation Bar</string>
    <string name="homepageLink">Home Page</string>
    <string name="medinfoPageLink">Medical Information</string>
    <string name="mapsPageLink">Maps Page</string>
    <string name="prescriptionLink">Prescription Page</string>
    <string name="calendarLink">Calendar Page</string>
    <string name="toDoLink">Task To-Do Page</string>
    <string name="contactsLink">Contacts Page</string>
    <string name="preferencesLink">Preferences Page</string>
    <string name="closeNav">Close</string>
    <string name="addmedication_etMedName">Name of the medication</string>
    <string name="addmedication_etMedExpdate">Expiration date</string>
    <string name="addmedication_etMedQte">0</string>
    <string name="addmedication_etMedDetails">Add details</string>
    <string name="addmedication_btnCancel">Cancel</string>
    <string name="addmedication_btnAdd">Add the medication</string>
    <string name="editPrescription_tvName">Xanax</string>
    <string name="editPrescription_tvQuantity">Quantity:</string>
    <string name="editTeditPrescription_etQuantity">10</string>
    <string name="editPrescription_tvExpDate">Exp. date:</string>
    <string name="editPrescription_etExpDate">19/03/2022</string>
    <string name="editPrescription_tvDetails">Details:</string>
    <string name="editPrescription_etDetails">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</string>
    <string name="editPrescription_btnDelete">Delete</string>
    <string name="editPrescription_btnCancel">
        <u>Cancel</u>
    </string>
    <string name="editPrescription_btnSave">Save</string>
    <string name="toolbar_btnAddContact">Add</string>
    <string name="toolbar_btnImportContact">Import</string>
    <string name="addContact_etPhoneNumber">Phone number</string>
    <string name="addContact_tvPhoneNumber">Choose a picture:</string>
    <string name="addContact_cbFavorite">Add to your favorites</string>
    <string name="addContact_tvContactTitle">Add a new contact</string>
    <string name="addContact_etName">Name of the contact</string>
    <string name="addContact_btnSelectPhoto">Select a photo</string>
    <string name="addContact_btnTakePhoto">Take a photo</string>
    <string name="addContact_btnSaveContact">Save</string>
    <string name="seeContact_tvContactTitle">View contact</string>
    <string name="seeContact_tvContactName">Unknown</string>
    <string name="seeContact_tvContactTextNumber">Phone number:</string>
    <string name="seeContact_tvContactPhoneNumber">Unknown</string>
    <string name="seeContact_btnDeleteContact">Delete</string>
    <string name="seeContact_btnReturnContact">Return</string>
    <string name="seeContact_btnCallContact">Call</string>
    <string name="seeContact_tvContactFavourite">Favourite:</string>
    <string name="seeContact_cbContactFavourite">Add this contact to your favourites!</string>
    <string name="contact_item_username">Username</string>
    <string name="contact_item_phonenumber">+44 1632 960795</string>
    <string-array name="daily">
        <item>Daily</item>
        <item>Weekly</item>
        <item>One Off</item>
    </string-array>
    <string name="myCardTitle">My Card</string>
    <string name="myCardName">Example Name</string>
    <string name="myCardPhoneNum">My Phone Number</string>
    <string name="myCardNumPlaceholder">12345678</string>
    <string name="myCardAddress">My Address</string>
    <string name="myCardAddressPlaceholder">Smith Street</string>
    <string name="myCardEmail">My Email</string>
    <string name="myCardEmailPlaceholder">example@email.com</string>
    <string name="myCardBtnSave">Save</string>
    <string name="myCardBtnReturn">Return</string>
    <string name="toolbar_btnEdit">Edit</string>
    <string name="tvpreferencesTitle">Edit your Preferences</string>
    <string name="tvCalID">Your Google Calendar ID (Make sure it\'s public)</string>
    <string name="etCalIDPlaceholder">Calendar ID</string>
    <string name="preferencesFile" translatable="false">uk.ac.rgu.elderaid</string>
    <string name="prefLoc1Key" translatable="false">fav1</string>
    <string name="prefLoc2Key" translatable="false">fav2</string>
    <string name="prefLoc3Key" translatable="false">fav3</string>
    <string name="prefLoc4Key" translatable="false">fav4</string>
    <string name="Loc1Default"></string>
    <string name="Loc2Default"></string>
</resources>