<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/myCardTitle"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollViewCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/cardBasicLinear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_profile" />


                <EditText
                    android:id="@+id/etMyCardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/myCardName"
                    android:textColorHint="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvCardPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/myCardPhoneNum"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCardPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/myCardNumPlaceholder"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tvCardAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/myCardAddress"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="15dp"
                android:hint="@string/myCardAddressPlaceholder"
                android:inputType="text" />
            <TextView
                android:id="@+id/tvCardEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/myCardEmail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="15dp"
                android:hint="@string/myCardEmailPlaceholder"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/buttonLinear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="35dp"
                    android:layout_weight="1"
                    android:background="@color/pacificblue"
                    android:text="@string/myCardBtnReturn"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/pacificblue"
                    android:text="@string/myCardBtnSave"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>