<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/editPrescription_tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/editPrescription_tvName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />

            <View
                style="@style/dialogDivider"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/editPrescription_tvQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/editPrescription_tvQuantity"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/editPrescription_ic_remove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_remove" />

                <EditText
                    android:id="@+id/editTeditPrescription_etQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/editTeditPrescription_etQuantity"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/editPrescription_ic_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add" />

            </LinearLayout>

            <TextView
                android:id="@+id/editPrescription_tvExpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/editPrescription_tvExpDate"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrescription_etExpDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="date"
                android:text="@string/editPrescription_etExpDate"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/editPrescription_tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/editPrescription_tvDetails"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrescription_etDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/editPrescription_etDetails" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editPrescription_btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/darkred"
                    android:text="@string/editPrescription_btnDelete"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/editPrescription_btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/editPrescription_btnCancel"
                    android:textColor="@color/darkred" />

                <Button
                    android:id="@+id/editPrescription_btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/pacificblue"
                    android:text="@string/editPrescription_btnSave"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>