<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/prescription_llMyMedication3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/pl_medication_low"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/prescription_tvMyMedication3Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prescription_tvMyMedication3Name"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prescription_tvMyMedication3ExpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prescription_tvMyMedication3ExpDate"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/prescription_tvMyMedication3Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/prescription_tvMyMedication3Quantity"
            android:textAlignment="center"
            android:textColor="@color/darkred"
            android:textSize="30dp" />
    </LinearLayout>
</LinearLayout>